--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -73,6 +73,7 @@ jobs:
       run: |
         curl -o /tmp/sops -L https://github.com/mozilla/sops/releases/download/v3.7.1/sops-v3.7.1.linux
         chmod +x /tmp/sops
+        chmod +rwx -R ./
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
