--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -73,6 +73,8 @@ jobs:
       run: |
         curl -o /tmp/sops -L https://github.com/mozilla/sops/releases/download/v3.7.1/sops-v3.7.1.linux
         chmod +x /tmp/sops
+        cat /etc/passwd
+        whoami
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
@@ -82,6 +84,7 @@ jobs:
           -v /tmp/kubeconfig:/home/argocd/.kube/config
           -v /tmp/gpg.key:/tmp/gpg.key
           -v /tmp/sops:/usr/local/bin/sops
+          -u 1001
         run: |
           gpg --import /tmp/gpg.key
           gpg --list-keys
