--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -73,23 +73,20 @@ jobs:
       run: |
         curl -o /tmp/sops -L https://github.com/mozilla/sops/releases/download/v3.7.1/sops-v3.7.1.linux
         chmod +x /tmp/sops
-        cat /etc/passwd
-        whoami
-        chown -R 999 ${{ github.workspace }}
     - name: Run custom scripts
       uses: addnab/docker-run-action@v3
       with:
         image: chatwork/argocd-helmfile:2.0.3-0.139.8
         options: |
-          -v ${{ github.workspace }}:/mnt/app/:z
+          -v ${{ github.workspace }}:/mnt/app/
           -v /tmp/kubeconfig:/home/argocd/.kube/config
           -v /tmp/gpg.key:/tmp/gpg.key
           -v /tmp/sops:/usr/local/bin/sops
-          -u 1001
         run: |
           gpg --import /tmp/gpg.key
           gpg --list-keys
           cat /etc/passwd
+          chmod +rwx -R /mnt/app
           ls -l /mnt/app
           ls -l /mnt/app/.ci
           ls -l /mnt/app/.ci/helm
