--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -85,12 +85,10 @@ jobs:
         run: |
           gpg --import /tmp/gpg.key
           gpg --list-keys
-          cat /etc/passwd
-          mkdir /mnt/helm
-          cp /mnt/app/.ci/* /mnt/helm
-          chmod +rwx -R /mnt/app
-          ls -l /mnt/helm
-          cd /mnt/helm
+          mkdir ~/app
+          cp /mnt/app/* ~/app
+          ls -l ~/app
+          cd ~/app
           helm secrets upgrade -n staging-bot --set image_tag=121cab20127eef775c1468beedf9faf9ecf4f15b -f .ci/helm/staging.values.yaml -f .ci/helm/secrets.staging.values.yaml bot .ci/helm/chart
 
   # deployment:
