--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -50,7 +50,7 @@ jobs:
   #       mv /tmp/.buildx-cache-new /tmp/.buildx-cache
   deployment:
     runs-on: ubuntu-18.04
-    needs: docker
+    # needs: docker
     steps:
     - name: Checkout
       uses: actions/checkout@v2
