--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,51 +6,51 @@ on:
     tags:
       - '*'
 jobs:
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v2
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-  #   - name: Set up QEMU
-  #     uses: docker/setup-qemu-action@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
 
-  #   - name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-  #   - name: Login to DockerHub
-  #     uses: docker/login-action@v1
-  #     with:
-  #       registry: ghcr.io
-  #       username: ${{ secrets.DOCKER_USERNAME }}
-  #       password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #   - name: Cache Docker layers
-  #     uses: actions/cache@v2
-  #     with:
-  #       path: /tmp/.buildx-cache
-  #       key: ${{ runner.os }}-buildx-${{ github.sha }}
-  #       restore-keys: |
-  #         ${{ runner.os }}-buildx-
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
 
-  #           - name: Build and push
-  #   - name: Build an image
-  #     uses: docker/build-push-action@v2
-  #     with:
-  #       platforms: linux/arm
-  #       context: .
-  #       push: true
-  #       tags: ghcr.io/vryazanov/russian-stocks-bot:${{ github.sha }}
-  #       cache-from: type=local,src=/tmp/.buildx-cache
-  #       cache-to: type=local,dest=/tmp/.buildx-cache-new
+            - name: Build and push
+    - name: Build an image
+      uses: docker/build-push-action@v2
+      with:
+        platforms: linux/arm
+        context: .
+        push: true
+        tags: ghcr.io/vryazanov/russian-stocks-bot:${{ github.sha }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-  #   - name: Move cache
-  #     run: |
-  #       rm -rf /tmp/.buildx-cache
-  #       mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
   deployment:
     runs-on: ubuntu-18.04
-    # needs: docker
+    needs: docker
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -87,32 +87,6 @@ jobs:
           -e KUBE_NAMESPACE=${{ env.KUBE_NAMESPACE }}
         run: |
           gpg --import /tmp/gpg.key
-          gpg --list-keys
           mkdir ~/app
           cp -r /mnt/app/. ~/app
-          cd ~/app
-          env
-          helm secrets upgrade -n $KUBE_NAMESPACE-bot --set image_tag=$IMAGE_TAG -f .ci/helm/$KUBE_NAMESPACE.values.yaml -f .ci/helm/secrets.$KUBE_NAMESPACE.values.yaml bot .ci/helm/chart
-
-  # deployment:
-  #   needs: docker
-  #   runs-on: 'ubuntu-latest'
-  #   steps:
-
-  #     uses: actions/checkout@v2
-  #   - name: Deploy
-  #     uses: 'deliverybot/helm@v1'
-  #     with:
-  #       release: 'bot'
-  #       namespace: '${{ env.KUBE_NAMESPACE }}-bot'
-  #       helm: helm3
-  #       chart: '.ci/helm/chart'
-  #       token: '${{ github.token }}'
-  #       values: |
-  #         image_tag: ${{ github.sha }}
-  #       value-files: >- 
-  #         [
-  #           ".ci/helm/${{ env.KUBE_NAMESPACE }}.values.yaml"
-  #         ]
-  #     env:
-  #       KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
+          helm secrets upgrade -n $KUBE_NAMESPACE-bot --set image_tag=$IMAGE_TAG -f ~/app/.ci/helm/$KUBE_NAMESPACE.values.yaml -f ~/app/.ci/helm/secrets.$KUBE_NAMESPACE.values.yaml bot ~/app/.ci/helm/chart
